Fixed .button-group > .button.actived z-index issue

--- a/scss/_button-group.scss
+++ b/scss/_button-group.scss
@@ -1,4 +1,3 @@
-
 .button-group {
   @include inline-block();
   vertical-align: middle;
@@ -30,8 +29,7 @@
   .button:hover,
   .button:focus,
   .button:active,
-  .button:actived,
-  .button.selected {
+  .button.actived {
     z-index: 2
   }
 
